Додає адаптив секціям

--- a/index.html
+++ b/index.html
@@ -505,7 +505,12 @@
           </div>
           <div class="modal-form-wrap confirm-wrap">
             <label class="modal-label confirm-label">
-              <input type="checkbox" name="modal-confirm" value="agree" class="input-confirm visually-hidden"/>
+              <input
+                type="checkbox"
+                name="modal-confirm"
+                value="agree"
+                class="input-confirm visually-hidden"
+              />
               <svg class="icon-no-active-checkbox">
                 <use href="./images/icons.svg#icon-no-active-checkbox"></use>
               </svg>
