--- a/portfolio.html
+++ b/portfolio.html
@@ -61,6 +61,11 @@
             </a>
           </li>
         </ul>
+        <button type="button" class="menu__btn">
+          <svg id="menu" width="24" height="16">
+            <use href="./images/icons.svg#icon-menu"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <main>
@@ -301,7 +306,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="footer__container container">
         <div class="contacts">
           <a href="./index.html" lang="en" class="logo logo--bottom"
@@ -376,6 +381,6 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
