Додає адаптив модальному вікну та нове меню для мобільного

--- a/portfolio.html
+++ b/portfolio.html
@@ -306,60 +306,62 @@
         </div>
       </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="footer__container container">
-        <div class="contacts">
-          <a href="./index.html" lang="en" class="logo logo--bottom"
-            >Web<span class="logo--light">Studio</span></a
-          >
-          <address class="address">
-            <p class="address__text">м. Київ, пр-т Лесі Українки, 26</p>
-            <ul class="contacts__list list">
-              <li class="contacts__item">
-                <a href="mailto:info@devstudio.com" class="contacts__link"
-                  >info@devstudio.com</a
-                >
+        <div class="footer__wrap">
+          <div class="contacts">
+            <a href="./index.html" lang="en" class="logo logo--bottom"
+              >Web<span class="logo--light">Studio</span></a
+            >
+            <address class="address">
+              <p class="address__text">м. Київ, пр-т Лесі Українки, 26</p>
+              <ul class="contacts__list list">
+                <li class="contacts__item">
+                  <a href="mailto:info@devstudio.com" class="contacts__link"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li class="contacts__item">
+                  <a href="tel:+380961111111" class="contacts__link"
+                    >+38 096 111 11 11</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div class="social">
+            <strong class="social__title">Приєднуйтесь</strong>
+            <ul class="social__list list">
+              <li class="social__item">
+                <a href="" class="social__link link">
+                  <svg class="social__icon">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="contacts__item">
-                <a href="tel:+380961111111" class="contacts__link"
-                  >+38 096 111 11 11</a
-                >
+              <li class="social__item">
+                <a href="" class="social__link link">
+                  <svg class="social__icon">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social__item">
+                <a href="" class="social__link link">
+                  <svg class="social__icon">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social__item">
+                <a href="" class="social__link link">
+                  <svg class="social__icon">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
-          </address>
-        </div>
-        <div class="social">
-          <strong class="social__title">Приєднуйтесь</strong>
-          <ul class="social__list list">
-            <li class="social__item">
-              <a href="" class="social__link link">
-                <svg class="social__icon">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social__item">
-              <a href="" class="social__link link">
-                <svg class="social__icon">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social__item">
-              <a href="" class="social__link link">
-                <svg class="social__icon">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social__item">
-              <a href="" class="social__link link">
-                <svg class="social__icon">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+          </div>
         </div>
         <div class="subscription">
           <strong class="subscription__title">Підпишіться на розсилку</strong>
@@ -381,6 +383,6 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
   </body>
 </html>
