--- a/index.html
+++ b/index.html
@@ -61,6 +61,90 @@
             </a>
           </li>
         </ul>
+        <button type="button" class="menu__btn menu-open-btn" data-menu-open>
+          <svg id="menu" width="24" height="16">
+            <use href="./images/icons.svg#icon-menu"></use>
+          </svg>
+        </button>
+        <div class="mob-menu is-hidden" data-menu>
+          <div class="menu-container">
+            <div class="mob-menu-top">
+              <button type="button" class="menu-close-btn" data-menu-close>
+                <svg class="icon-close">
+                  <use href="./images/icons.svg#icon-close"></use>
+                </svg>
+              </button>
+              <nav class="menu__nav">
+                <ul class="menu__list list">
+                  <li class="menu__item">
+                    <a href="./index.html" class="menu__link menu__link--active"
+                      >Студія</a
+                    >
+                  </li>
+                  <li class="menu__item">
+                    <a href="./portfolio.html" class="menu__link">Портфоліо</a>
+                  </li>
+                  <li class="menu__item">
+                    <a href="#" class="menu__link">Контакти</a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+
+           <div class="mob-menu-bottom"> <div class="mob-connect">
+              <ul class="menu__connects list">
+                <li class="menu__tel">
+                  <a href="tel:+380961111111" class="menu__tel--link">
+                    <p>+38 096 111 11 11</p>
+                  </a>
+                </li>
+                <li class="menu__mail">
+                  <a href="mailto:info@devstudio.com" class="menu__mail--link">
+                    <p>info@devstudio.com</p></a
+                  >
+                </li>
+              </ul>
+            </div>
+            <ul class="mob-soc-list list">
+              <li class="mob-soc-item">
+                <a
+                  href=""
+                  class="mob-soc-link link"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >Instagram</a
+                >
+              </li>
+              <li class="mob-soc-item">
+                <a
+                  href=""
+                  class="mob-soc-link link"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >Twitter</a
+                >
+              </li>
+              <li class="mob-soc-item">
+                <a
+                  href=""
+                  class="mob-soc-link link"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >Facebook</a
+                >
+              </li>
+              <li class="mob-soc-item">
+                <a
+                  href=""
+                  class="mob-soc-link link"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >LinkedIn</a
+                >
+              </li>
+            </ul></div>
+          </div>
+        </div>
       </div>
     </header>
     <main>
@@ -522,13 +606,14 @@
                 <use href="./images/icons.svg#icon-check"></use>
               </svg>
               Погоджуюся з розсилкою та приймаю
-              <a href="#" class="link-confirm">Умови договору</a>
             </label>
+            <a href="#" class="link-confirm">Умови договору</a>
           </div>
           <button type="submit" class="btn-modal">Відправити</button>
         </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
