--- a/portfolio.html
+++ b/portfolio.html
@@ -61,11 +61,97 @@
             </a>
           </li>
         </ul>
-        <button type="button" class="menu__btn">
+        <button type="button" class="menu__btn" data-menu-open>
           <svg id="menu" width="24" height="16">
             <use href="./images/icons.svg#icon-menu"></use>
           </svg>
         </button>
+        <div class="menu is-hidden" data-menu>
+          <div class="menu__container">
+            <div class="menu--top">
+              <button type="button" class="menu__btn--close" data-menu-close>
+                <svg class="menu__icon--close">
+                  <use href="./images/icons.svg#icon-close"></use>
+                </svg>
+              </button>
+              <nav class="menu__nav">
+                <ul class="menu__list list">
+                  <li class="menu__item">
+                    <a href="./index.html" class="menu__link">Студія</a>
+                  </li>
+                  <li class="menu__item">
+                    <a
+                      href="./portfolio.html"
+                      class="menu__link menu__link--active"
+                      >Портфоліо</a
+                    >
+                  </li>
+                  <li class="menu__item">
+                    <a href="#" class="menu__link">Контакти</a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+
+            <div class="menu--bottom">
+              <div class="menu__connect">
+                <ul class="menu__connects list">
+                  <li class="menu__tel">
+                    <a href="tel:+380961111111" class="menu__link--tel">
+                      <p>+38 096 111 11 11</p>
+                    </a>
+                  </li>
+                  <li class="menu__mail">
+                    <a
+                      href="mailto:info@devstudio.com"
+                      class="menu__link--mail"
+                    >
+                      <p>info@devstudio.com</p></a
+                    >
+                  </li>
+                </ul>
+              </div>
+              <ul class="menu__list--soc list">
+                <li class="menu__item--soc">
+                  <a
+                    href=""
+                    class="menu__link--soc link"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    >Instagram</a
+                  >
+                </li>
+                <li class="menu__item--soc">
+                  <a
+                    href=""
+                    class="menu__link--soc link"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    >Twitter</a
+                  >
+                </li>
+                <li class="menu__item--soc">
+                  <a
+                    href=""
+                    class="menu__link--soc link"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    >Facebook</a
+                  >
+                </li>
+                <li class="menu__item--soc">
+                  <a
+                    href=""
+                    class="menu__link--soc link"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    >LinkedIn</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
     </header>
     <main>
@@ -384,5 +470,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
