Додаю адаптив фото

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <a href="./portfolio.html" class="navigation__link">Портфоліо</a>
             </li>
             <li class="navigation__item">
-              <a href="#" class="navigation__link">Контакти</a>
+              <a href="#contacts" class="navigation__link">Контакти</a>
             </li>
           </ul>
         </nav>
@@ -223,34 +223,52 @@
           <h2 class="procedures-title">Чим ми займаємося</h2>
           <ul class="procedures-list list">
             <li class="procedures-item">
-              <img
-                src="./images/box-1.jpg"
-                alt="Чоловік програмує за комп'ютером"
-                width="370"
-                class="procedures-item-pics"
-              />
+              <picture>
+                <source
+                  srcset="./images/box-1.jpg 1x, ./images/box-1-2x.jpg 2x"
+                  media="(min-width:1200px)"
+                />
+                <img
+                  src="./images/box-1.jpg"
+                  alt="Чоловік програмує за комп'ютером"
+                  width="370"
+                  class="procedures-item-pics"
+                />
+              </picture>
               <div class="procedures-item-overlay">
                 <p class="procedures-item-text">Десктопні додатки</p>
               </div>
             </li>
             <li class="procedures-item">
-              <img
-                src="./images/box-2.jpg"
-                alt="Дівчина розробляє макет дизайну мобільного додатку"
-                width="370"
-                class="procedures-item-pics"
-              />
+              <picture>
+                <source
+                  srcset="./images/box-2.jpg 1x, ./images/box-2-2x.jpg 2x"
+                  media="(min-width:1200px)"
+                />
+                <img
+                  src="./images/box-2.jpg"
+                  alt="Дівчина розробляє макет дизайну мобільного додатку"
+                  width="370"
+                  class="procedures-item-pics"
+                />
+              </picture>
               <div class="procedures-item-overlay">
                 <p class="procedures-item-text">Мобільні додатки</p>
               </div>
             </li>
             <li class="procedures-item">
-              <img
-                src="./images/box-3.jpg"
-                alt="Чоловік дивиться в палітру кольорів на планшеті"
-                width="370"
-                class="procedures-item-pics"
-              />
+              <picture>
+                <source
+                  srcset="./images/box-3.jpg 1x, ./images/box-3-2x.jpg 2x"
+                  media="(min-width:1200px)"
+                />
+                <img
+                  src="./images/box-3.jpg"
+                  alt="Чоловік дивиться в палітру кольорів на планшеті"
+                  width="370"
+                  class="procedures-item-pics"
+                />
+              </picture>
               <div class="procedures-item-overlay">
                 <p class="procedures-item-text">Дизайнерські рішення</p>
               </div>
@@ -264,7 +282,26 @@
           <h2 class="team-title">Наша команда</h2>
           <ul class="team-list list">
             <li class="team-list-item">
-              <img src="./images/pd.jpg" alt="Ігор Дем'яненко" width="270" />
+              <picture>
+                <source
+                  srcset="./images/pd.jpg 1x, ./images/pd-2x.jpg 2x"
+                  media="(min-width:1200px)"
+                />
+                <source
+                  srcset="./images/pd-tab.jpg 1x, ./images/pd-tab-2x.jpg 2x"
+                  media="(min-width:768px)"
+                />
+                <source
+                  srcset="./images/pd-mob.jpg 1x, ./images/pd-mob-2x.jpg 2x"
+                  media="(max-width:767px)"
+                />
+                <img
+                  src="./images/pd-mob.jpg"
+                  alt="Ігор Дем'яненко"
+                  width="270"
+                />
+              </picture>
+
               <div class="team-worker">
                 <h3 class="team-list-name">Ігор Дем'яненко</h3>
                 <p lang="en" class="team-list-work">Product Designer</p>
@@ -301,7 +338,22 @@
               </div>
             </li>
             <li class="team-list-item">
-              <img src="./images/fd.jpg" alt="Ольга Рєпіна" width="270" />
+              <picture>
+                <source
+                  srcset="./images/fd.jpg 1x, ./images/fd-2x.jpg 2x"
+                  media="(min-width:1200px)"
+                />
+                <source
+                  srcset="./images/fd-tab.jpg 1x, ./images/fd-tab-2x.jpg 2x"
+                  media="(min-width:768px)"
+                />
+                <source
+                  srcset="./images/fd-mob.jpg 1x, ./images/fd-mob-2x.jpg 2x"
+                  media="(max-width:767px)"
+                />
+                <img src="./images/fd-mob.jpg" alt="Ольга Рєпіна" width="270" />
+              </picture>
+
               <div class="team-worker">
                 <h3 class="team-list-name">Ольга Рєпіна</h3>
                 <p lang="en" class="team-list-work">Frontend Developer</p>
@@ -338,11 +390,35 @@
               </div>
             </li>
             <li class="team-list-item">
-              <img
-                src="./images/marketing.jpg"
-                alt="Микола Тарасов"
-                width="270"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/marketing.jpg    1x,
+                    ./images/marketing-2x.jpg 2x
+                  "
+                  media="(min-width:1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/marketing-tab.jpg    1x,
+                    ./images/marketing-tab-2x.jpg 2x
+                  "
+                  media="(min-width:768px)"
+                />
+                <source
+                  srcset="
+                    ./images/marketing-mob.jpg    1x,
+                    ./images/marketing-mob-2x.jpg 2x
+                  "
+                  media="(max-width:767px)"
+                />
+                <img
+                  src="./images/marketing-mob.jpg"
+                  alt="Микола Тарасов"
+                  width="270"
+                />
+              </picture>
+
               <div class="team-worker">
                 <h3 class="team-list-name">Микола Тарасов</h3>
                 <p lang="en" class="team-list-work">Marketing</p>
@@ -379,7 +455,31 @@
               </div>
             </li>
             <li class="team-list-item">
-              <img src="./images/ui.jpg" alt="Михайло Єрмаков" width="270" />
+              <picture>
+                <source
+                  srcset="
+                    ./images/ui.jpg    1x,
+                    ./images/ui-2x.jpg 2x
+                  "
+                  media="(min-width:1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/ui-tab.jpg    1x,
+                    ./images/ui-tab-2x.jpg 2x
+                  "
+                  media="(min-width:768px)"
+                />
+                <source
+                  srcset="
+                    ./images/ui-mob.jpg    1x,
+                    ./images/ui-mob-2x.jpg 2x
+                  "
+                  media="(max-width:767px)"
+                />
+                <img src="./images/ui-mob.jpg" alt="Михайло Єрмаков" width="270" />
+              </picture>
+              
               <div class="team-worker">
                 <h3 class="team-list-name">Михайло Єрмаков</h3>
                 <p lang="en" class="team-list-work">UI Designer</p>
@@ -472,7 +572,7 @@
     <footer class="footer">
       <div class="footer__container container">
         <div class="footer__wrap">
-          <div class="contacts">
+          <div class="contacts" id="contacts">
             <a href="./index.html" lang="en" class="logo logo--bottom"
               >Web<span class="logo--light">Studio</span></a
             >
