--- a/portfolio.html
+++ b/portfolio.html
@@ -186,12 +186,35 @@
             <li class="portfolio-works-item">
               <a href="" class="portfolio-list-link link">
                 <div class="portfolio-list-wrap">
-                  <img
-                    src="./images/technokryak.jpg"
-                    alt="Веб-сайт Технокряк"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/technokryak.jpg    1x,
+                        ./images/technokryak-2x.jpg 2x
+                      "
+                      media="(min-width:1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/technokryak-tab.jpg    1x,
+                        ./images/technokryak-tab-2x.jpg 2x
+                      "
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/technokryak-mob.jpg    1x,
+                        ./images/technokryak-mob-2x.jpg 2x
+                      "
+                      media="(max-width:767px)"
+                    />
+                    <img
+                      src="./images/technokryak-mob.jpg"
+                      alt="Веб-сайт Технокряк"
+                      width="370"
+                      height="294"
+                    />
+                  </picture>
                   <p class="portfolio-overlay-text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -207,12 +230,36 @@
             <li class="portfolio-works-item">
               <a href="" class="portfolio-list-link link">
                 <div class="portfolio-list-wrap">
-                  <img
-                    src="./images/new-orlean.jpg"
-                    alt="Постер New Orlean vs Golden Star"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/new-orlean.jpg    1x,
+                        ./images/new-orlean-2x.jpg 2x
+                      "
+                      media="(min-width:1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/new-orlean-tab.jpg    1x,
+                        ./images/new-orlean-tab-2x.jpg 2x
+                      "
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/new-orlean-mob.jpg    1x,
+                        ./images/new-orlean-mob-2x.jpg 2x
+                      "
+                      media="(max-width:767px)"
+                    />
+                    <img
+                      src="./images/new-orlean-mob.jpg"
+                      alt="Постер New Orlean vs Golden Star"
+                      width="370"
+                      height="294"
+                    />
+                  </picture>
+
                   <p class="portfolio-overlay-text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -230,12 +277,36 @@
             <li class="portfolio-works-item">
               <a href="" class="portfolio-list-link link">
                 <div class="portfolio-list-wrap">
-                  <img
-                    src="./images/seafood.jpg"
-                    alt="Додаток Seafood"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/seafood.jpg    1x,
+                        ./images/seafood-2x.jpg 2x
+                      "
+                      media="(min-width:1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/seafood-tab.jpg    1x,
+                        ./images/seafood-tab-2x.jpg 2x
+                      "
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/seafood-mob.jpg    1x,
+                        ./images/seafood-mob-2x.jpg 2x
+                      "
+                      media="(max-width:767px)"
+                    />
+                    <img
+                      src="./images/seafood-mob.jpg"
+                      alt="Додаток Seafood"
+                      width="370"
+                      height="294"
+                    />
+                  </picture>
+
                   <p class="portfolio-overlay-text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -253,12 +324,33 @@
             <li class="portfolio-works-item">
               <a href="" class="portfolio-list-link link">
                 <div class="portfolio-list-wrap">
-                  <img
-                    src="./images/prime.jpg"
-                    alt="Маркетинг Prime"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="./images/prime.jpg 1x, ./images/prime-2x.jpg 2x"
+                      media="(min-width:1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/prime-tab.jpg    1x,
+                        ./images/prime-tab-2x.jpg 2x
+                      "
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/prime-mob.jpg    1x,
+                        ./images/prime-mob-2x.jpg 2x
+                      "
+                      media="(max-width:767px)"
+                    />
+                    <img
+                      src="./images/prime-mob.jpg"
+                      alt="Маркетинг Prime"
+                      width="370"
+                      height="294"
+                    />
+                  </picture>
+
                   <p class="portfolio-overlay-text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -276,12 +368,33 @@
             <li class="portfolio-works-item">
               <a href="" class="portfolio-list-link link">
                 <div class="portfolio-list-wrap">
-                  <img
-                    src="./images/boxes.jpg"
-                    alt="Додаток Boxes"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="./images/boxes.jpg 1x, ./images/boxes-2x.jpg 2x"
+                      media="(min-width:1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/boxes-tab.jpg    1x,
+                        ./images/boxes-tab-2x.jpg 2x
+                      "
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/boxes-mob.jpg    1x,
+                        ./images/boxes-mob-2x.jpg 2x
+                      "
+                      media="(max-width:767px)"
+                    />
+                    <img
+                      src="./images/boxes-mob.jpg"
+                      alt="Додаток Boxes"
+                      width="370"
+                      height="294"
+                    />
+                  </picture>
+
                   <p class="portfolio-overlay-text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -299,12 +412,36 @@
             <li class="portfolio-works-item">
               <a href="" class="portfolio-list-link link">
                 <div class="portfolio-list-wrap">
-                  <img
-                    src="./images/inspiration.jpg"
-                    alt="Веб-сайт Inspiration has no Borders"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/inspiration.jpg    1x,
+                        ./images/inspiration-2x.jpg 2x
+                      "
+                      media="(min-width:1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/inspiration-tab.jpg    1x,
+                        ./images/inspiration-tab-2x.jpg 2x
+                      "
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/inspiration-mob.jpg    1x,
+                        ./images/inspiration-mob-2x.jpg 2x
+                      "
+                      media="(max-width:767px)"
+                    />
+                    <img
+                      src="./images/inspiration-mob.jpg"
+                      alt="Веб-сайт Inspiration has no Borders"
+                      width="370"
+                      height="294"
+                    />
+                  </picture>
+
                   <p class="portfolio-overlay-text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -322,12 +459,36 @@
             <li class="portfolio-works-item">
               <a href="" class="portfolio-list-link link">
                 <div class="portfolio-list-wrap">
-                  <img
-                    src="./images/limited-edition.jpg"
-                    alt="Дизайн Limited Edition"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/limited-edition.jpg    1x,
+                        ./images/limited-edition-2x.jpg 2x
+                      "
+                      media="(min-width:1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/limited-edition-tab.jpg       1x,
+                        ./images/limited-edition-tab-2x.jpg 2x
+                      "
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/limited-edition-mob.jpg    1x,
+                        ./images/limited-edition-mob-2x.jpg 2x
+                      "
+                      media="(max-width:767px)"
+                    />
+                    <img
+                      src="./images/limited-edition-mob.jpg"
+                      alt="Дизайн Limited Edition"
+                      width="370"
+                      height="294"
+                    />
+                  </picture>
+
                   <p class="portfolio-overlay-text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -345,12 +506,36 @@
             <li class="portfolio-works-item">
               <a href="" class="portfolio-list-link link">
                 <div class="portfolio-list-wrap">
-                  <img
-                    src="./images/lab.jpg"
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/lab.jpg    1x,
+                        ./images/lab-2x.jpg 2x
+                      "
+                      media="(min-width:1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/lab-tab.jpg    1x,
+                        ./images/lab-tab-2x.jpg 2x
+                      "
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/lab-mob.jpg    1x,
+                        ./images/lab-mob-2x.jpg 2x
+                      "
+                      media="(max-width:767px)"
+                    />
+                    <img
+                    src="./images/lab-mob.jpg"
                     alt="Маркетинг LAB"
                     width="370"
                     height="294"
                   />
+                  </picture>
+                  
                   <p class="portfolio-overlay-text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -368,12 +553,36 @@
             <li class="portfolio-works-item">
               <a href="" class="portfolio-list-link link">
                 <div class="portfolio-list-wrap">
-                  <img
-                    src="./images/growing-business.jpg"
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/growing-business.jpg    1x,
+                        ./images/growing-business-2x.jpg 2x
+                      "
+                      media="(min-width:1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/growing-business-tab.jpg    1x,
+                        ./images/growing-business-tab-2x.jpg 2x
+                      "
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/growing-business-mob.jpg    1x,
+                        ./images/growing-business-mob-2x.jpg 2x
+                      "
+                      media="(max-width:767px)"
+                    />
+                    <img
+                    src="./images/growing-business-mob.jpg"
                     alt="Додаток Growing Business"
                     width="370"
                     height="294"
                   />
+                  </picture>
+                  
                   <p class="portfolio-overlay-text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
