--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
               >
             </li>
             <li class="navigation__item">
-              <a href="#" class="navigation__link">Контакти</a>
+              <a href="#contacts" class="navigation__link">Контакти</a>
             </li>
           </ul>
         </nav>
@@ -604,7 +604,7 @@
     <footer class="footer">
       <div class="footer__container container">
         <div class="footer__wrap">
-          <div class="contacts">
+          <div class="contacts" id="contacts">
             <a href="./index.html" lang="en" class="logo logo--bottom"
               >Web<span class="logo--light">Studio</span></a
             >
