--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </nav>
         <ul class="connects list">
           <li class="connects__item">
-            <a href="mailto:info@devstudio.com" class="connects__link">
+            <a href="mailto:info@devstudio.com" class="connects__link connects__link--mail">
               <svg class="connects__icon--mail">
                 <use href="./images/icons.svg#icon-mail"></use>
               </svg>
@@ -53,7 +53,7 @@
             >
           </li>
           <li class="connects__item">
-            <a href="tel:+380961111111" class="connects__link">
+            <a href="tel:+380961111111" class="connects__link connects__link--tel">
               <svg class="connects__icon--tel">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
@@ -156,7 +156,7 @@
       <!-- Замовити послугу -->
       <section class="hero">
         <div class="container hero-container">
-          <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
+          <h1 class="hero__title">Ефективні рішення для  <br> вашого бізнесу</h1>
           <button type="button" class="hero__btn" data-modal-open>
             Замовити послугу
           </button>
